--- a/w4/stylelab4.css
+++ b/w4/stylelab4.css
@@ -37,14 +37,14 @@ h2{
 }
 
 header h1{
+    font-family: "Teko", sans-serif;
     width: 478px;
     height: 50px;
     color:rgb(187,9,8);
     font-size: 48px;
     font-weight: 400;
     text-align: left;
-    
-    margin-left: 25px;
+    margin: 15px 0 0 30px;
     
 }
 
@@ -86,6 +86,7 @@ header #twitter{
     display: flex;
     align-items: center;    
     justify-content: center;
+    margin-right: 16px;
 }
 
 #content{
@@ -183,17 +184,19 @@ header #twitter{
 #leftimg{
     display: flex;
     flex-direction:row;
-    align-items: flex-end;
-    /*margin:*/
+    margin-bottom: 20px;
+    
 }
 .blueray{
     width:117px;
     height: 148px;
+    margin-right: 20px;
     
 }
 .price{
     width:191px;
     height: 130px;
+    margin-right: 38px;
    
 
 }
