--- a/w6/style.css
+++ b/w6/style.css
@@ -55,7 +55,9 @@ section{
 aside{
     background-color:#505050;
     width:45px;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 aside button{
@@ -82,8 +84,8 @@ aside img{
     height: 32px;
 }
 .square{
-    margin-top: 10px;
-    margin-left: 12px;
+    margin-top: -520px;
+    margin-left: 15px;
     width: 26px;
     height: 32px;
     color: #c3c3c3;
@@ -94,10 +96,9 @@ aside img{
 }
 
 .trashcan{
-    position: absolute;
+    
     color: #c3c3c3;
-    bottom: 0;
-    left: 15px;
+    margin-left: 15px;
     width:32px;
     height:32px;
 }
