--- a/w6/style.css
+++ b/w6/style.css
@@ -96,6 +96,7 @@ aside img{
     position: absolute;
     color: #c3c3c3;
     bottom: 0;
+    margin-bottom: 5px;
     left: 15px;
     width:32px;
     height:32px;
