--- a/w6/style.css
+++ b/w6/style.css
@@ -55,12 +55,7 @@ section{
 aside{
     background-color:#505050;
     width:45px;
-<<<<<<< HEAD
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-=======
->>>>>>> d62294c5b2c8ab1695d3749fafa02655000c455a
+    position: relative;
 }
 
 aside button{
@@ -87,8 +82,8 @@ aside img{
     height: 32px;
 }
 .square{
-    margin-top: -520px;
-    margin-left: 15px;
+    margin-top: 5px;
+    margin-left: 12px;
     width: 26px;
     height: 32px;
     color: #c3c3c3;
@@ -99,7 +94,7 @@ aside img{
 }
 
 .trashcan{
-    
+    position: absolute;
     color: #c3c3c3;
     bottom: 0;
     left: 15px;
@@ -258,11 +253,6 @@ nav button p{
 .tab > div:hover p {
     color: #ffffff;
 }
-
-
-
-
-
 .active {
     background-color: #1f1f1f;
 }
@@ -289,10 +279,7 @@ nav button p{
 }
 #breadcrumbs span{
     margin:0 10px;
-    
 }
-
-
 textarea{
     box-sizing: border-box;
     width:100%;
@@ -325,8 +312,6 @@ footer i{
     width: 12px;
     color:#c3c3c3;
     position: absolute;
-
-
 }
 footer i:hover{
     color:white;
