--- a/w7/stats/stats.css
+++ b/w7/stats/stats.css
@@ -47,6 +47,9 @@ thead{
     td{
           font-size: 1em;
     }
+    tr:first-child{
+        display: table-row;
+    }
     tr:last-child{
         display: none;
     }
