--- a/w2/stylelab.css
+++ b/w2/stylelab.css
@@ -10,12 +10,12 @@ h1 {
 h2 {
     border: 3px solid grey;
     width: 20%;
-    margin-left: 500px;
     background-color: grey;
     border-radius: 10px;
     text-align: center;
     color: rgb(10, 63, 136);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: auto;
 }
 body {
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(12,12,12,0.8632703081232493) 35%);
